AKS-Deployments/AKS_Ingress_Controller/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: Resense-PoC
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  loadBalancerIP: 20.198.75.177
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: nginx-ingress
