AKS-Deployments/AKS_Ingress_Controller/resense-app-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resense-frontend-letsencrypt
  namespace: resense
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  tls:
    - hosts:
        - resense.tech
      secretName: aks-tls-secret
  rules:
    - host: resense.tech
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: resense-ui-service
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resense-backend-letsencrypt
  namespace: resense
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  tls:
    - hosts:
        - resense.tech
      secretName: aks-tls-secret
  rules:
    - host: resense.tech
      http:
        paths:
        - path: /backend/(.+)
          pathType: Prefix
          backend:
            service:
              name: resense-api-service
              port:
                number: 5000
